--- a/frontend/src/ui/assets/css/lib/dropdown.css
+++ b/frontend/src/ui/assets/css/lib/dropdown.css
@@ -30,7 +30,7 @@
 }
 
 .dropdown-wrapper-background {
-    @apply bg-black bg-opacity-50 md:bg-transparent;
+    @apply bg-black/50 md:bg-transparent;
     @apply m-0 !important;
     @apply fixed bottom-0 left-0 right-0 top-0;
     @apply z-40;
