--- a/frontend/src/ui/assets/css/tailwind.css
+++ b/frontend/src/ui/assets/css/tailwind.css
@@ -3,139 +3,137 @@
 @tailwind utilities;
 
 @layer base {
-    @media (prefers-color-scheme: light) {
-        :root {
-            --color-transparent: transparent;
-            --color-current: currentColor;
-            --color-inherit: inherit;
-            --color-black: 0 0 0;
-            --color-white: 255 255 255;
-            --color-error: 186 26 26;
-            --color-error-container: 255 218 214;
-            --color-onerror: 255 255 255;
-            --color-onerror-container: 147 0 10;
-            --color-primary: 49 98 141;
-            --color-primary-container: 207 229 255;
-            --color-primary-fixed: 207 229 255;
-            --color-primary-fixed-dim: 156 203 251;
-            --color-onprimary: 255 255 255;
-            --color-onprimary-container: 17 74 115;
-            --color-onprimary-fixed: 0 29 51;
-            --color-onprimary-fixed-variant: 17 74 115;
-            --color-secondary: 82 96 112;
-            --color-secondary-container: 213 228 247;
-            --color-secondary-fixed: 213 228 247;
-            --color-secondary-fixed-dim: 185 200 218;
-            --color-onsecondary: 255 255 255;
-            --color-onsecondary-container: 58 72 87;
-            --color-onsecondary-fixed: 14 29 42;
-            --color-onsecondary-fixed-variant: 58 72 87;
-            --color-tertiary: 105 87 121;
-            --color-tertiary-container: 239 219 255;
-            --color-tertiary-fixed: 239 219 255;
-            --color-tertiary-fixed-dim: 212 190 230;
-            --color-ontertiary: 255 255 255;
-            --color-ontertiary-container: 80 64 97;
-            --color-ontertiary-fixed: 35 21 51;
-            --color-ontertiary-fixed-variant: 80 64 97;
-            --color-surface: 247 249 255;
-            --color-surface-dim: 216 218 224;
-            --color-surface-bright: 247 249 255;
-            --color-surface-variant: 222 227 235;
-            --color-surface-tint: 49 98 141;
-            --color-surface-container-lowest: 255 255 255;
-            --color-surface-container-low: 242 243 249;
-            --color-surface-container: 236 238 244;
-            --color-surface-container-high: 230 232 238;
-            --color-surface-container-highest: 224 226 232;
-            --color-onsurface: 24 28 32;
-            --color-onsurface-variant: 66 71 78;
-            --color-outline: 114 119 127;
-            --color-outline-variant: 194 199 207;
-            --color-success: 36 108 44;
-            --color-success-container: 169 245 165;
-            --color-onsuccess: 36 108 44;
-            --color-onsuccess-container: 0 33 5;
-            --color-warning: 107 95 0;
-            --color-warning-container: 251 228 71;
-            --color-onwarning: 107 95 0;
-            --color-onwarning-container: 32 28 0;
-            --color-info: 0 98 157;
-            --color-info-container: 207 229 255;
-            --color-oninfo: 0 98 157;
-            --color-oninfo-container: 0 29 51;
-            --color-red: 186 14 72;
-            --color-red-container: 255 217 221;
-            --color-onred: 186 14 72;
-            --color-onred-container: 64 0 19;
-        }
+    :root {
+        --color-transparent: transparent;
+        --color-current: currentColor;
+        --color-inherit: inherit;
+        --color-black: 0 0 0;
+        --color-white: 255 255 255;
+        --color-primary: 49 98 141;
+        --color-primary-container: 207 229 255;
+        --color-primary-fixed: 207 229 255;
+        --color-primary-fixed-dim: 156 203 251;
+        --color-onprimary: 255 255 255;
+        --color-onprimary-container: 17 74 115;
+        --color-onprimary-fixed: 0 29 51;
+        --color-onprimary-fixed-variant: 17 74 115;
+        --color-secondary: 82 96 112;
+        --color-secondary-container: 213 228 247;
+        --color-secondary-fixed: 213 228 247;
+        --color-secondary-fixed-dim: 185 200 218;
+        --color-onsecondary: 255 255 255;
+        --color-onsecondary-container: 58 72 87;
+        --color-onsecondary-fixed: 14 29 42;
+        --color-onsecondary-fixed-variant: 58 72 87;
+        --color-tertiary: 105 87 121;
+        --color-tertiary-container: 239 219 255;
+        --color-tertiary-fixed: 239 219 255;
+        --color-tertiary-fixed-dim: 212 190 230;
+        --color-ontertiary: 255 255 255;
+        --color-ontertiary-container: 80 64 97;
+        --color-ontertiary-fixed: 35 21 51;
+        --color-ontertiary-fixed-variant: 80 64 97;
+        --color-surface: 247 249 255;
+        --color-surface-dim: 216 218 224;
+        --color-surface-bright: 247 249 255;
+        --color-surface-variant: 222 227 235;
+        --color-surface-tint: 49 98 141;
+        --color-surface-container-lowest: 255 255 255;
+        --color-surface-container-low: 242 243 249;
+        --color-surface-container: 236 238 244;
+        --color-surface-container-high: 230 232 238;
+        --color-surface-container-highest: 224 226 232;
+        --color-onsurface: 24 28 32;
+        --color-onsurface-variant: 66 71 78;
+        --color-outline: 114 119 127;
+        --color-outline-variant: 194 199 207;
+        --color-scrim: 0 0 0;
+        --color-error: 186 26 26;
+        --color-error-container: 255 218 214;
+        --color-onerror: 255 255 255;
+        --color-onerror-container: 147 0 10;
+        --color-success: 36 108 44;
+        --color-success-container: 169 245 165;
+        --color-onsuccess: 36 108 44;
+        --color-onsuccess-container: 0 33 5;
+        --color-warning: 107 95 0;
+        --color-warning-container: 251 228 71;
+        --color-onwarning: 107 95 0;
+        --color-onwarning-container: 32 28 0;
+        --color-info: 0 98 157;
+        --color-info-container: 207 229 255;
+        --color-oninfo: 0 98 157;
+        --color-oninfo-container: 0 29 51;
+        --color-red: 186 14 72;
+        --color-red-container: 255 217 221;
+        --color-onred: 186 14 72;
+        --color-onred-container: 64 0 19;
     }
 
-    @media (prefers-color-scheme: dark) {
-        :root {
-            --color-transparent: transparent;
-            --color-current: currentColor;
-            --color-inherit: inherit;
-            --color-black: 0 0 0;
-            --color-white: 255 255 255;
-            --color-error: 255 236 233;
-            --color-error-container: 255 174 164;
-            --color-onerror: 0 0 0;
-            --color-onerror-container: 34 0 1;
-            --color-primary: 231 241 255;
-            --color-primary-container: 152 199 247;
-            --color-primary-fixed: 207 229 255;
-            --color-primary-fixed-dim: 156 203 251;
-            --color-onprimary: 0 0 0;
-            --color-onprimary-container: 0 12 26;
-            --color-onprimary-fixed: 0 0 0;
-            --color-onprimary-fixed-variant: 0 18 35;
-            --color-secondary: 231 241 255;
-            --color-secondary-container: 181 196 214;
-            --color-secondary-fixed: 213 228 247;
-            --color-secondary-fixed-dim: 185 200 218;
-            --color-onsecondary: 0 0 0;
-            --color-onsecondary-container: 0 12 25;
-            --color-onsecondary-fixed: 0 0 0;
-            --color-onsecondary-fixed-variant: 4 18 31;
-            --color-tertiary: 249 235 255;
-            --color-tertiary-container: 208 187 226;
-            --color-tertiary-fixed: 239 219 255;
-            --color-tertiary-fixed-dim: 212 190 230;
-            --color-ontertiary: 0 0 0;
-            --color-ontertiary-container: 18 5 33;
-            --color-ontertiary-fixed: 0 0 0;
-            --color-ontertiary-fixed-variant: 24 10 40;
-            --color-surface: 16 20 24;
-            --color-surface-dim: 16 20 24;
-            --color-surface-bright: 77 80 85;
-            --color-surface-variant: 66 71 78;
-            --color-surface-tint: 156 203 251;
-            --color-surface-container-lowest: 0 0 0;
-            --color-surface-container-low: 28 32 36;
-            --color-surface-container: 45 49 53;
-            --color-surface-container-high: 56 60 64;
-            --color-surface-container-highest: 68 71 76;
-            --color-onsurface: 255 255 255;
-            --color-onsurface-variant: 255 255 255;
-            --color-outline: 236 240 248;
-            --color-outline-variant: 190 195 203;
-            --color-success: 141 216 139;
-            --color-success-container: 1 83 23;
-            --color-onsuccess: 141 216 139;
-            --color-onsuccess-container: 169 245 165;
-            --color-warning: 221 200 43;
-            --color-warning-container: 80 71 0;
-            --color-onwarning: 221 200 43;
-            --color-onwarning-container: 251 228 71;
-            --color-info: 152 203 255;
-            --color-info-container: 0 74 119;
-            --color-oninfo: 152 203 255;
-            --color-oninfo-container: 207 229 255;
-            --color-red: 255 178 188;
-            --color-red-container: 145 0 53;
-            --color-onred: 255 178 188;
-            --color-onred-container: 255 217 221;
-        }
+    html.dark {
+        --color-transparent: transparent;
+        --color-current: currentColor;
+        --color-inherit: inherit;
+        --color-black: 0 0 0;
+        --color-white: 255 255 255;
+        --color-primary: 231 241 255;
+        --color-primary-container: 152 199 247;
+        --color-primary-fixed: 207 229 255;
+        --color-primary-fixed-dim: 156 203 251;
+        --color-onprimary: 0 0 0;
+        --color-onprimary-container: 0 12 26;
+        --color-onprimary-fixed: 0 0 0;
+        --color-onprimary-fixed-variant: 0 18 35;
+        --color-secondary: 231 241 255;
+        --color-secondary-container: 181 196 214;
+        --color-secondary-fixed: 213 228 247;
+        --color-secondary-fixed-dim: 185 200 218;
+        --color-onsecondary: 0 0 0;
+        --color-onsecondary-container: 0 12 25;
+        --color-onsecondary-fixed: 0 0 0;
+        --color-onsecondary-fixed-variant: 4 18 31;
+        --color-tertiary: 249 235 255;
+        --color-tertiary-container: 208 187 226;
+        --color-tertiary-fixed: 239 219 255;
+        --color-tertiary-fixed-dim: 212 190 230;
+        --color-ontertiary: 0 0 0;
+        --color-ontertiary-container: 18 5 33;
+        --color-ontertiary-fixed: 0 0 0;
+        --color-ontertiary-fixed-variant: 24 10 40;
+        --color-surface: 16 20 24;
+        --color-surface-dim: 16 20 24;
+        --color-surface-bright: 77 80 85;
+        --color-surface-variant: 66 71 78;
+        --color-surface-tint: 156 203 251;
+        --color-surface-container-lowest: 0 0 0;
+        --color-surface-container-low: 28 32 36;
+        --color-surface-container: 45 49 53;
+        --color-surface-container-high: 56 60 64;
+        --color-surface-container-highest: 68 71 76;
+        --color-onsurface: 255 255 255;
+        --color-onsurface-variant: 255 255 255;
+        --color-outline: 236 240 248;
+        --color-outline-variant: 190 195 203;
+        --color-scrim: 0 0 0;
+        --color-error: 255 236 233;
+        --color-error-container: 255 174 164;
+        --color-onerror: 0 0 0;
+        --color-onerror-container: 34 0 1;
+        --color-success: 141 216 139;
+        --color-success-container: 1 83 23;
+        --color-onsuccess: 141 216 139;
+        --color-onsuccess-container: 169 245 165;
+        --color-warning: 221 200 43;
+        --color-warning-container: 80 71 0;
+        --color-onwarning: 221 200 43;
+        --color-onwarning-container: 251 228 71;
+        --color-info: 152 203 255;
+        --color-info-container: 0 74 119;
+        --color-oninfo: 152 203 255;
+        --color-oninfo-container: 207 229 255;
+        --color-red: 255 178 188;
+        --color-red-container: 145 0 53;
+        --color-onred: 255 178 188;
+        --color-onred-container: 255 217 221;
     }
 }
