--- a/frontend/src/ui/assets/css/styling/buttons.css
+++ b/frontend/src/ui/assets/css/styling/buttons.css
@@ -28,16 +28,24 @@
 /* --------------------------------------------------------------- */
 
 .btn-primary {
-    @apply bg-primary/90 text-onprimary;
+    @apply bg-primary/90;
+    @apply text-onprimary;
 }
 
-.btn-primary:not(:disabled):hover {
-    @apply bg-primary shadow;
+
+@media not all and (hover: none) {
+    .btn-primary:not(:disabled):hover {
+        @apply bg-primary;
+        @apply text-onprimary;
+        @apply shadow;
+    }
 }
+
 
 .btn-primary.disabled,
 .btn-primary:disabled {
-    @apply bg-onsurface/10 text-onsurface/40;
+    @apply bg-onsurface/10;
+    @apply text-onsurface/40;
 }
 
 /* --------------------------------------------------------------- */
@@ -45,16 +53,20 @@
 /* --------------------------------------------------------------- */
 
 .btn-secondary {
-    @apply bg-secondary-container/90 text-onsecondary-container;
+    @apply bg-secondary-container/90;
+    @apply text-onsecondary-container;
 }
 
 .btn-secondary:not(:disabled):hover {
-    @apply bg-secondary-container shadow;
+    @apply bg-secondary-container;
+    @apply text-onsecondary-container;
+    @apply shadow;
 }
 
 .btn-secondary.disabled,
 .btn-secondary:disabled {
-    @apply bg-onsurface/10 text-onsurface/40;
+    @apply bg-onsurface/10;
+    @apply text-onsurface/40;
 }
 
 /* --------------------------------------------------------------- */
@@ -62,18 +74,26 @@
 /* --------------------------------------------------------------- */
 
 .btn-danger {
-    @apply bg-error-container/90 text-onerror-container;
-    @apply dark:bg-onerror-container/90 dark:text-error-container;
+    @apply bg-error-container/90;
+    @apply text-onerror-container;
+    @apply dark:bg-onerror-container/90;
+    @apply dark:text-error-container;
 }
 
 a.btn-danger:not(:disabled):hover,
 .btn-danger:not(:disabled):hover {
-    @apply bg-error-container shadow;
+    @apply bg-error-container;
+    @apply text-onerror-container;
+    @apply shadow;
+    @apply dark:bg-onerror-container;
+    @apply dark:text-error-container;
 }
+
 
 .btn-danger.disabled,
 .btn-danger:disabled {
-    @apply bg-error-container/10 text-onerror-container/40;
+    @apply bg-error-container/10;
+    @apply text-onerror-container/40;
 }
 
 /* --------------------------------------------------------------- */
@@ -83,8 +103,10 @@ a.btn-danger:not(:disabled):hover,
 .btn-floating,
 .btn-floating-danger {
     position: relative;
-    @apply gap-5 p-5 md:gap-6 md:p-6;
-    @apply rounded-2xl shadow-lg;
+    @apply gap-5 md:gap-6;
+    @apply p-5 md:p-6;
+    @apply rounded-2xl;
+    @apply shadow-lg;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -103,28 +125,42 @@ a.btn-danger:not(:disabled):hover,
     @apply rounded-2xl;
 }
 
+/* Primary FAB */
+
 .btn-floating {
-    @apply bg-primary-container/90 text-onprimary-container;
+    @apply bg-primary-container/90;
+    @apply text-onprimary-container;
 }
 
 .btn-floating:not(:disabled):hover {
-    @apply bg-primary-container shadow-xl;
+    @apply bg-primary-container;
+    @apply shadow-xl;
 }
 
+/* Danger FAB */
+
 .btn-floating-danger {
-    @apply bg-error-container/90 text-onerror-container;
+    @apply bg-error-container/90;
+    @apply text-onerror-container;
+    @apply dark:bg-onerror-container/90;
+    @apply dark:text-error-container;
 }
 
 .btn-floating-danger:not(:disabled):hover {
-    @apply bg-error-container shadow-xl;
+    @apply bg-error-container;
+    @apply shadow-xl;
+    @apply dark:bg-onerror-container;
+    @apply dark:text-error-container;
 }
 
 .btn-floating:disabled {
-    @apply bg-primary-container/40 text-onprimary-container/40;
+    @apply bg-primary-container/40;
+    @apply text-onprimary-container/40;
 }
 
 .btn-floating-danger:disabled {
-    @apply bg-error-container/40 text-onerror-container/40;
+    @apply bg-error-container/40;
+    @apply text-onerror-container/40;
 }
 
 /* --------------------------------------------------------------- */
@@ -132,11 +168,12 @@ a.btn-danger:not(:disabled):hover,
 /* --------------------------------------------------------------- */
 
 .btn-ghost {
-    @apply text-secondary;
+    @apply text-primary;
 }
 
+
 .btn-ghost:not(:disabled):hover {
-    @apply bg-secondary-container text-onsecondary-container;
+    @apply bg-primary/10;
 }
 
 .btn-ghost:disabled,
@@ -153,7 +190,7 @@ a.btn-danger:not(:disabled):hover,
 }
 
 .btn-ghost-danger:not(:disabled):hover {
-    @apply bg-error-container text-onerror-container;
+    @apply bg-error/10;
 }
 
 /* --------------------------------------------------------------- */
@@ -171,7 +208,7 @@ a.btn-danger:not(:disabled):hover,
 .icon-button:before {
     content: '';
     background: currentColor;
-    opacity: 0.05;
+    opacity: 0.1;
     pointer-events: none;
     position: absolute;
     top: 50%;
@@ -227,14 +264,21 @@ a.btn-danger:not(:disabled):hover,
 
 .btn-tag {
     white-space: nowrap;
-    @apply rounded-full border border-outline text-secondary;
-    @apply px-4 py-1 text-sm font-bold;
+    border-width: 1px;
+    @apply rounded-full;
+    @apply border-outline;
+    @apply text-secondary;
+    @apply px-4 py-1;
+    @apply text-sm;
+    @apply font-bold;
     @apply hover:border-secondary;
     @apply hover:shadow;
 }
 
 .btn-tag.active {
-    @apply border-secondary bg-secondary-container text-onsecondary-container;
+    @apply border-secondary;
+    @apply bg-secondary-container;
+    @apply text-onsecondary-container;
 }
 
 .btn-tag.active .icon-inactive,
