fix supporting text color on disabled inputs

--- a/frontend/src/ui/assets/css/inputs/input-generic.css
+++ b/frontend/src/ui/assets/css/inputs/input-generic.css
@@ -91,6 +91,10 @@
     @apply text-onsurface/50;
 }
 
+.input-field-wrapper:has(input[disabled]) + .input-hint {
+    @apply text-onsurface-variant/40;
+}
+
 /* --------------------------------------------------------------- */
 /* hover */
 /* --------------------------------------------------------------- */
