fix minor css bugs

--- a/frontend/src/ui/assets/css/components/inputs/index.css
+++ b/frontend/src/ui/assets/css/components/inputs/index.css
@@ -3,4 +3,4 @@
 @import 'input-date.css';
 @import 'input-textarea.css';
 @import 'input-numeric.css';
-@import 'input-dropdown.css';
+@import 'input-selection.css';
