add missing buttons

--- a/frontend/src/ui/assets/css/components/buttons/index.css
+++ b/frontend/src/ui/assets/css/components/buttons/index.css
@@ -5,6 +5,8 @@
 @import 'btn-ghost.css';
 @import 'btn-fab.css';
 @import 'btn-icon.css';
+@import 'btn-back.css';
+@import 'btn-tag.css';
 
 button {
     cursor: pointer;
