--- a/frontend/src/ui/assets/css/main.css
+++ b/frontend/src/ui/assets/css/main.css
@@ -61,3 +61,12 @@ svg {
 .animate-once {
     animation-iteration-count: 1;
 }
+
+@font-face {
+    font-family: 'Comfortaa';
+    src: url('../fonts/Comfortaa-VariableFont_wght.woff2') format('woff2 supports variations');
+    src: url('../fonts/Comfortaa-VariableFont_wght.woff2') format('woff2-variations');
+    src: url('../fonts/Comfortaa-VariableFont_wght.woff2') format('woff2') tech('variations');
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+}
