--- a/frontend/src/ui/assets/css/components/buttons/index.css
+++ b/frontend/src/ui/assets/css/components/buttons/index.css
@@ -6,7 +6,7 @@
 @import 'btn-fab.css';
 @import 'btn-icon.css';
 @import 'btn-back.css';
-@import 'btn-tag.css';
+@import 'btn-toggle.css';
 
 button {
     cursor: pointer;
